force-app/main/default/objects/Twilio_Config__mdt/Twilio_Config__mdt.object-meta.xml
<CustomObject>
    <label>Twilio Configuration</label>
    <pluralLabel>Twilio Configurations</pluralLabel>
    <description>Stores configuration settings for Twilio integration</description>
</CustomObject> 