force-app/main/default/objects/Twilio_Config__mdt/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <label>Account SID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 