force-app/main/default/objects/Twilio_Config__mdt/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <label>Auth Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 