force-app/main/default/objects/Twilio_Config__mdt/fields/Default_From_Number__c.field-meta.xml
<CustomField>
    <fullName>Default_From_Number__c</fullName>
    <label>Default From Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 